--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,13 @@
 	"files.associations": {
 		"pipex.h": "c",
 		"iterator": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"_types.h": "c",
+		"__locale": "c",
+		"__string": "c",
+		"string": "c",
+		"string_view": "c",
+		"complex": "c",
+		"get_next_line.h": "c"
 	}
 }
