--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"chan.h": "c",
 		"locale": "c",
-		"__locale": "c"
+		"__locale": "c",
+		"utils.h": "c",
+		"pipex.h": "c",
+		"get_next_line.h": "c"
 	}
 }
