make the better solution forerror handle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
 		"utils.h": "c",
 		"pipex.h": "c",
 		"get_next_line.h": "c",
-		"wait.h": "c"
+		"wait.h": "c",
+		"iterator": "c",
+		"stdio.h": "c",
+		"chrono": "c"
 	}
 }
