--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,13 @@
 		"iterator": "c",
 		"stdio.h": "c",
 		"chrono": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"__bit_reference": "c",
+		"__hash_table": "c",
+		"__string": "c",
+		"algorithm": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c"
 	}
 }
